--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="bg-off-black h-dvh sm:h-[600px]">
+<html lang="en" class="bg-off-black h-dvh sm:h-lvh">
   <head>
     <meta charset="UTF-8" />
     <!-- social links-->
